[package]
name = "pixel_map"
description = "A map of pixels implemented by an MX quad tree."
version = "0.1.0"
authors = ["Troy Kinsella"]
homepage = "https://github.com/DonkulosisLabs/pixel_map_rs"
repository = "https://github.com/DonkulosisLabs/pixel_map_rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["pixel", "map", "image", "quadtree", "data-structure"]
categories = ["data-structures", "multimedia::images"]

[dependencies]
glam = "^0.24.1"
num-traits = "^0.2.16"
serde = { version = "^1.0.180", features = ["derive"], optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5.1"
ron = "0.8"

[features]
serde = [ "dep:serde", "glam/serde" ]

[[bench]]
name = "set_pixel"
harness = false

[[bench]]
name = "get_pixel"
harness = false

[[bench]]
name = "visit"
harness = false

