[package]
name = "pixel_map"
description = "A map of pixels implemented by an MX quadtree."
version = "0.3.0"
authors = ["Troy Kinsella"]
homepage = "https://github.com/DonkulosisLabs/pixel_map_rs"
repository = "https://github.com/DonkulosisLabs/pixel_map_rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["pixel", "map", "image", "quadtree", "data-structure"]
categories = ["data-structures", "multimedia::images"]

[dependencies]
bevy_math = "^0.14.1"
fxhash = "^0.2.1"
indexmap = "2.5.0"
num-traits = "^0.2.19"
serde = { version = "^1.0.205", features = ["derive"], optional = true, default-features = false }

[dev-dependencies]
criterion = "^0.5.1"
pprof = { version = "^0.13.0", features = ["criterion", "flamegraph"] }
ron = "^0.8.1"
image = "0.25.2"

[features]
serialize = ["dep:serde", "bevy_math/serialize"]

[[bench]]
name = "get_pixel"
harness = false

[[bench]]
name = "pathfinding"
harness = false

[[bench]]
name = "set_pixel"
harness = false

[[bench]]
name = "visit"
harness = false

[[bench]]
name = "visit_neighbors"
harness = false
